<!--
  ~ Copyright 2023 Eugene Menshenin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">че задали</string>
    <string name="main">че задали?</string>
    <string name="journal">Дневник</string>
    <string name="announcements">Объявления</string>
    <string name="grades">Оценки</string>
    <string name="login">Логин</string>
    <string name="login_title">Введите логин и пароль</string>
    <string name="password">Пароль</string>
    <string name="selected_school">Выбранная школа</string>
    <string name="start_typing">Начните вводить…</string>
    <string name="attachments">Прикрепленные файлы</string>
    <string name="send_homework">Ответ на задание</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="in_development">В разработке</string>
    <string name="selected_theme">Выбранная тема</string>
    <string name="contain_attachments">Есть прикрепленные файлы</string>
    <string name="settings">Настройки</string>
    <string name="more">more</string>
    <string name="homework">Домашнее задание</string>
    <string name="download_update">Скачивание обновления</string>
    <string name="log_in">Войти</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="same_as_system">Как в системе</string>
    <string name="select_theme">Выбор темы</string>
    <string name="answer_text">Текст ответа</string>
    <string name="todo_snackbar">Пока что, это не работает, но скоро будет :)</string>
    <string name="clear_cache">Очистить кэш</string>
    <string name="why_grade">За что оценка?</string>
    <string name="teacher_comment">Подробности от учителя</string>
    <string name="past_mandatory_header">Есть просроченные задания</string>
    <string name="choose_school">Выбери школу</string>
    <string name="author">Автор</string>
    <string name="change_profile_photo">Изменить аватарку</string>
    <string name="birthday">Дата рождения</string>
    <string name="phone_number">Мобильный телефон</string>
    <string name="email">E-mail</string>
    <string name="show_phone_number">Показывать номер телефона сотрудникам ОО</string>
    <string name="change_password">Сменить пароль</string>
    <string name="change_control_question">Изменить контрольный вопрос</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_new_password">Подтвердите новый пароль</string>
    <string name="save">Сохранить</string>
    <string name="selected_question">Выбранный вопрос</string>
    <string name="answer">Ответ на вопрос</string>
    <string name="control_question">Контрольный вопрос</string>
    <string name="show_all">Показать все</string>
    <string name="profile_photo">Фото профиля</string>
    <string name="author_profile_photo">Фото профиля автора</string>
    <string name="attach_file">Прикрепить файл</string>
    <string name="new_version_available">Доступна новая версия приложения</string>
    <string name="whats_new">Что нового?</string>
    <string name="update">Обновить</string>
    <string name="something_went_wrong">Упс, что то пошло не так :(</string>
    <string name="load_grades">Загружаем оценки</string>
    <string name="total_grade">Итого</string>
    <string name="avg_grade">Средний балл</string>
    <string name="class_avg_grade">Средний балл класса</string>
    <string name="grades_count">Количество оценок</string>
    <string name="five_grade">Пятерок</string>
    <string name="four_grade">Четверок</string>
    <string name="three_grade">Троек</string>
    <string name="two_grade">Двоек</string>
    <string name="one_grade">Единиц</string>
    <string name="about_app">О приложении</string>
    <string name="added_homework_answer">Добавлен ответ на домашнее задание</string>
    <string name="teacher_caption">Есть подробности от учителя</string>
    <string name="added_attachment">Прикреплен файл</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="duty_mark">Просроченное задание</string>
    <string name="retry_button">Повторить попытку</string>
    <string name="send_file">Загрузить файл</string>
    <string name="replace_file">Заменить файл</string>
    <string name="edit_description">Изменить описание</string>
    <string name="delete_file">Удалить файл</string>
    <string name="choose_file">Выбрать файл</string>
    <string name="description">Описание</string>
    <string name="upload">Отправить</string>
    <string name="current_year">Текущий учебный год</string>
    <string name="change_email">Изменить email</string>
    <string name="change_phone_number">Изменить номер телефона</string>
    <string name="choose_year">Выбери год</string>
    <string name="choose_user">Выбери пользователя</string>

    <string name="test_announcements_item">Общероссийская олимпиада школьников РАНХиГС по обществознанию, английскому языку, немецкому языку, китайскому языку, истории, журналистике, политологии, экономике и финансовой грамотности.

Олимпиада проходит в два этапа: отборочный (дистанционный формат);

- заключительный этап олимпиады (на площадке Челябинского филиала РАНХиГС).

Регистрация проходит до 25.10.2022 года на сайте Академии (https://olymp.ranepa.ru/?register).

Более подробная информация на сайте Академии (https://www.ranepa.ru/podgotovka-k-postupleniyu/olimpiada-shkolnikov-rankhigs/) или по тел.: 214-52-25.
    </string>
    <string name="made_with_love_by_mezhendosina">Made with ♥ by @mezhendosina</string>
    <string name="idea_author">Автор идеи</string>
    <string name="idea_author_text">Никита Лапшин</string>
    <string name="special_thanks_header">За активную помощь в тестировании спасибо</string>
    <string name="special_thanks">Даниилу Барменкову\nВячеславу Сумину\nМарии Левчановой\nhttps://github.com/ArtemBay</string>
    <string name="telegram_channel">Telegram-канал приложения</string>
    <string name="github_repo">GitHub-репозиторий</string>
    <string name="choose_region">Выбери регион</string>
    <string name="not_found_question">Не нашел своего региона в списке? Напиши сюда!</string>
    <string name="grade_calculator_header">Сколько оценок до…</string>
    <string name="or">или</string>
    <string name="too_many_grades">Очень много оценок</string>
    <string name="update_available">Доступно обновление</string>
    <string name="show_se_time">Отображать время начала и конца урока</string>
    <string name="show_lesson_number">Показывать номер урока</string>
    <string name="region_name">Название региона</string>
    <string name="regon_url">URL СГО этого региона</string>
    <string name="send_request">Отправить запрос</string>
    <string name="request_region">Предложить регион</string>
    <string name="grades_settings">Настройка отображения оценок</string>
    <string name="sort_grades_by">Сортировка оценок</string>
    <string name="year_grade_header">Отображать оценки за</string>
    <string name="sort_by">Сортировать по</string>
    <string name="new_grade_notification">Уведомления о новых оценках</string>
    <string name="sgo_app_logo">Логотип SGO app</string>
    <string name="file_icon">Иконка файла</string>
    <string name="copy_text">Скоприровать в буфер обмена</string>
    <string name="edit_answer">Изменить ответ</string>
    <string name="add_answer">Отправить ответ на задание</string>
    <string name="main_icon">Иконка приложения</string>
    <string name="app_version">v %1$s</string>
    <string name="publication_date">Дата публикации: %1$s</string>
    <string name="start_end_date">%1$s - %2$s</string>
    <string name="user_name">%1$s %2$s %3$s</string>
    <string name="new_version">%1$s ➡ %2$s</string>
    <string name="from_good_to_bad_grade">От хороших оценок к плохим</string>
    <string name="from_bad_to_good_grade">От плохих оценок к хорошим</string>
    <string name="by_lesson_name">По названию предмета</string>
    <string name="set">Применить</string>
    <string name="grade_item_details_transition_name">grade_item_details_transition_name</string>
    <string name="grade_item_transition_name">grade_item_%1$s</string>
    <string name="lesson_item_transition_name">lesson_item_%1$s</string>
    <string name="lesson_item_details_transition_name">lesson_item_destination</string>
    <string name="grades_title_with_year">Оценки за %1$s</string>
    <string name="app_web_site">Сайт приложения</string>
    <string name="diawry_with_drawable">Карточками</string>
    <string name="diary_as_list">Списком</string>
    <string name="diary_settings">Дневник</string>
    <string name="find_school">Поиск школы</string>
    <string name="continue_">Продолжить</string>
    <string name="answer_text_warning">Это поле можно оставить пустым</string>
    <string name="answer_sended">Ответ отправлен</string>
    <string name="week_without_lessons">На этой неделе уроков нет</string>
    <string name="without_announcements">Объявлений нет</string>
    <string name="show_lessons_as">Отображение уроков в дневнике</string>
    <string name="logged_in_via_esia">Вход через ГосУслуги выполнен!</string>
    <string name="selected_grade_period">Выбранный период</string>
    <string name="signin_with_login_password">Войти с помощью логина и пароля</string>
    <string name="signin_via_gosuslugi">Войти через Госуслуги</string>
    <string name="hi">Привет!</string>
    <string name="you_in">Это че задали</string>
    <string name="welcome_about">Неофициальный порт электронного дневника «Сетевой город. Образование» на Android</string>
    <string name="theme">Тема</string>
    <string name="empty">Не заполнено</string>
    <string name="che_zadali">че задали?</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="special_thanks_body"><![CDATA[Даниилу Барменкову<br>Вячеславу Сумину<br>Марии Левчановой<br><a href=\"https://github.com/ArtemBay\">ArtemBay</a>]]></string>
    <string name="now_not_avaliable">Пока недоступно, но скоро обязательно будет :)</string>
    <string name="monday">Понедельник день бездельник</string>
    <string name="tuesday">Вторник повторник</string>
    <string name="wednesday">Среда тамада</string>
    <string name="for_grade">Для</string>
    <string name="grade_requires">необходимо получить...</string>
</resources>