<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/update_available"
        android:icon="@drawable/ic_update_available"
        android:title="@string/update_available"
        android:visible="false"
        app:iconTint="?attr/colorOnBackground"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/announcements"
        android:icon="@drawable/ic_announcements"
        android:title="@string/announcements"
        app:iconTint="?attr/colorOnBackground"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:iconTint="?attr/colorOnBackground"
        app:showAsAction="ifRoom" />
</menu>