<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/edit">
        <item
            android:id="@+id/replace_file"
            android:icon="@drawable/ic_attachment"
            android:title="@string/replace_file"
            app:iconTint="?attr/colorOnBackground" />
        <item
            android:id="@+id/edit_description"
            android:icon="@drawable/ic_edit_text"
            android:title="@string/edit_description"
            app:iconTint="?attr/colorOnBackground" />
    </group>

    <group android:id="@+id/delete">
        <item
            android:id="@+id/delete_file"
            android:icon="@drawable/ic_delete"
            android:title="@string/delete_file"
            app:iconTint="?attr/colorError" />
    </group>
</menu>