<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2023 Eugene Menshenin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginFlow.welcome.WelcomeFragment">

    <TextView
        android:id="@+id/hi"
        style="@style/TextAppearance.SGOApp.Login.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="256dp"
        android:drawablePadding="8dp"
        android:text="@string/hi"
        android:visibility="invisible"
        app:drawableEndCompat="@drawable/ic_hi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/you_in"
        style="@style/TextAppearance.SGOApp.Login.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/you_in"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/hi"
        app:layout_constraintTop_toBottomOf="@id/hi" />

    <TextView
        android:id="@+id/about"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome_about"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/hi"
        app:layout_constraintTop_toBottomOf="@id/you_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gosuslugi_login"
        style="@style/Widget.SGOApp.Button.Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/signin_via_gosuslugi"
        android:visibility="invisible"
        app:icon="@drawable/ic_gosuslugi"
        app:iconPadding="8dp"
        app:iconSize="28dp"
        app:layout_constraintBottom_toTopOf="@id/why_disabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/why_disabled"
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:visibility="invisible"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/now_not_avaliable"
        app:layout_constraintBottom_toTopOf="@id/default_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/default_login"
        style="@style/Widget.SGOApp.Button.OutlinedButton.IconOnly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/signin_with_login_password"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>